2013-12-07 Roman
- DAQ.JavaLikeCalc: Syntax highlight rules some improved for keywords "in" and "var" not higlight into variable form.
- UI.Vision: GeomZ set to UP for the widget copy is added. New widget's id enumerated generation is made simpler.


2013-12-06 Roman
- DB.VCABase: To field "Archives" of the graphics control panel the archivators list is set generation dynamic.
- DB.OscadaLibs: base.anUnif template is significant expanded.
- FIX:Archive.{FSArch,DBArch}: Alarm messages by negative level requesting from messages archive is fixed.
- !!!:DAQ.OPC_UA: Publish, Subscribe and MonitoredItem related services support for input protocol's part is added.
- FIX:UI.{VCAEngine,Vision}: Group attributes requesting function Vision::attrsSet() is rewrited for strong ordering for
    fix unordered writing to some yet missed attributes that appeared after upper changes. Detected on primitive "ElFig".
- UI.Vision: Internal object's indexes SpecIdx and ShapeType are moved to global space.
- FIX:UI.{Vision,WebVision}: Two method applied for prevent primitive "Diagram" possible hung on some data combination begin
    from different archivators.


2013-11-29 Roman
- !:DB.MySQL: MULTI_STATEMENTS requests is enabled, but process and return only first result.
- FIX:UI.Vision: UnDo records for align events, into development mode, set only for real changed widgets.


2013-11-26 Roman
- !!:SYS.TArchVal: LibGD2 using into core is fixed by set variable HAVE_GD_CORE.
    Value archive's trend build is implemented through SVG for LibGD2 into core disable.
- FIX:DAQ.OPC_UA: nodeClassMask processing into service "Browse" is fixed for input part.


2013-11-23 Roman
- DB: Widget ElCadr is some expanded for negative precision process for exponential form accuracy into vcaBase.db.
    Input analog parameter's template fix for lag after EVAL and zero value temporary set.
- !!:FIX:SYS.Archive.Val: allow access to next level archive into single request, like from 1m to 10m.