@@ -103,10 +103,10 @@ Server::EP *TProt::epEnAt( const string &ep )
     return NULL;
 }
 
-void TProt::inReq( string &request, const string &inPrtId )
+void TProt::inReq( string &request, const string &inPrtId, string *answ )
 {
     ResAlloc res(en_res, false);
-    Server::inReq(request, inPrtId);
+    Server::inReq(request, inPrtId, answ);
 }
 
 int TProt::writeToClient( const string &inPrtId, const string &data )
