@@ -1,3 +1,8 @@
+2013-12-09 Roman
+- DAQ.OPC_UA: Synchronous input requests processing support return and disabled, enabled for LTS.
+    Force session check is added for messages' services not OpcUa_CreateSessionRequest, OpcUa_FindServersRequest and OpcUa_GetEndpointsRequest.
+
+
 2013-12-07 Roman
 - DAQ.JavaLikeCalc: Syntax highlight rules some improved for keywords "in" and "var" not higlight into variable form.
 - UI.Vision: GeomZ set to UP for the widget copy is added. New widget's id enumerated generation is made simpler.
